Detects if Mosaic is in a Flatpak or not
If Mosaic is running in a Flatpak, it will use $XDG_DATA_HOME
If Mosaic is running outside a Flatpak environment, it will use
$HOME/.mosaic

--- a/libhtmlw/meson.build
+++ b/libhtmlw/meson.build
@@ -22,6 +22,7 @@ libhtmlw_static = static_library(
     'htmlw',
     sources,
     dependencies: [openmotif, xmu],
-    include_directories: libhtmlw_inc
+    include_directories: libhtmlw_inc,
+    c_args: '-fcommon'
 )
 
