--- a/meson.build
+++ b/meson.build
@@ -19,10 +19,12 @@ compactstring = declare_dependency(link_with: libcompactstring_static, include_d
 subdir('libwww2')
 subdir('libXmx')
 subdir('libhtmlw')
+subdir('libutils')
 
 nut = declare_dependency(link_with: libnut_static, include_directories: include_dir)
 www2 = declare_dependency(link_with: libwww2_static, include_directories: include_dir)
 Xmx = declare_dependency(link_with: libXmx_static, include_directories: include_dir)
 htmlw = declare_dependency(link_with: libhtmlw_static, include_directories: include_dir)
+utils = declare_dependency(link_with: libutils_static, include_directories: include_dir)
 
 subdir('src')
