--- a/src/com.github.fries1234.ncsa-mosaic.desktop
+++ b/src/com.github.fries1234.ncsa-mosaic.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=NCSA Mosaic
 Comment=The NSCA Mosaic Web Browser
 Exec=Mosaic %u
-MimeType=text/html;x-scheme-handler/http
+MimeType=text/html;x-scheme-handler/http;x-scheme-handler/gopher
 Terminal=false
 Categories=Network;WebBrowser;
 Keywords=web;browser;internet;mosaic;
